fix css clipping on card

--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ dialog::backdrop {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding:10px;
 }
 
 dialog {
@@ -193,7 +194,8 @@ dialog .user-input {
     color: rgb(136, 120, 97);
     position: relative;
     left: 80%;
-    padding-top: 20px;
+    padding-top: 10px;
+    margin-top:5px;
 }
 
 input:focus {
